# remu

./: .gitignore  CMakeLists.txt  Image  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-single-platform.yml
apps/remu/: CMakeLists.txt  main.cpp
cmake/: Options.cmake  Sanitizers.cmake  ToolchainWarnings.cmake
include/remu/common/: log.hpp  result.hpp
include/remu/cpu/: cpu.hpp  csr.hpp  decode.hpp  exception.hpp  exec_result.hpp  execute.hpp  regs.hpp  trap.hpp
include/remu/devices/: clint.hpp  plic.hpp  uart.hpp
include/remu/loaders/: image_loader.hpp
include/remu/mem/: bus.hpp  memory.hpp  region.hpp
include/remu/platform/: console_input.hpp  virt.hpp
include/remu/runtime/: arguments.hpp  runner.hpp  sim.hpp
resources/buildroot-configs/: full.config.reference.txt  linux-nommu.config  remu_riscv32_nommu_defconfig
resources/dtb/: mini.dtb  minimal.dtb  virt.dtb  virt.dts
src/common/: log.cpp
src/cpu/: cpu.cpp  csr.cpp  decode.cpp  execute_rv32a.cpp  execute_rv32i.cpp  execute_rv32m.cpp  regs.cpp  trap.cpp
src/devices/: clint.cpp  plic.cpp  uart.cpp
src/loaders/: image_loader.cpp
src/mem/: bus.cpp  memory.cpp
src/platform/: console_input.cpp  virt.cpp
src/runtime/: runner.cpp  sim.cpp
